# elastic-ai.experiments

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SETUP.md  devenv.nix  main.py  pyproject.toml
.github/actions/prepare-devenv/: action.yml
.github/workflows/: checks.yaml  release.yaml
creator_plugins/delta_compression/: __init__.py
creator_plugins/delta_compression/base_modules/: linear.py
creator_plugins/delta_compression/delta/: consecutive.py
eai_creator/base_modules/: separable_conv2d.py
eai_creator/nn/fixed_point/conv2d/layer/: __init__.py  batch_normed_sep_conv2d.py  sep_conv2d.py
eai_plugins/delta_compression/: README.md
eai_plugins/delta_compression/base_modules/: linear.py
experiments/delta_compression/: mlp_fxp_analyze_weight_and_delta_distribution_per_layer.py  mlp_fxp_analyze_weight_and_delta_distribution_whole_network.py  mlp_fxp_fashionmnist_evaluate.py
experiments/training/: mlp_delta_fashionmnist_adam.py  mlp_fashionmnist_adam.py  mlp_fashionmnist_adamw.py  mlp_fp_fashionmnist.py  mlp_fxp_fashionmnist.py  mlp_fxp_fashionmnist_adam.py  mlp_fxp_fashionmnist_adamw.py
scripts/: run_experiment.sh
src/config/: README.md  config_schema.json  config_schema.py  configuration.py
src/experiments/: __init__.py  delta_compression.py  experiment.py  runner.py
src/experiments/delta_compression/: dc_experiment_01.py  dc_experiment_02.py
src/experiments/qat/: torchao_qat_fashionmnist.py  torchao_qat_smartable.py
src/nn/data/: __init__.py  dataset.py  fashionmnist.py  smartable.py  utils.py
src/nn/delta/: __init__.py  consecutive.py
src/nn/model/: __init__.py  conv.py  linear.py  serialize.py
src/nn/training/: __init__.py  metrics.py  seeding.py  train.py
src/tools/: analyze_model_weights.py  collect_metrics.py  generate_graphs.py  test_eai_ir.py
src/utils/: __init__.py  helper.py
test/unit/config/: test_configuration.py
test/unit/nn/data/: test_fashionmnist.py  test_smartable.py
test/unit/nn/delta/: test_consecutive.py
test/unit/nn/model/: test_serialize.py
test/unit/nn/training/: test_metrics.py  test_training.py
