[project]
name = "ies.experiments.deltacomp"
dynamic = ["version"]
description = "Run Experiments for delta-compression, based on the elastic-AI.creator"
authors = [{name = "David P. Federl", email = "david-peter.federl@uni-due.de"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "build>=1.3.0",
    "hatch>=1.14.1",
    "hatch-vcs>=0.5.0",
]
log = [
    "logdecorator>=2.5",
    "tqdm>=4.67.1",
    "tqdm-loggable>=0.2",
]
test = [
    "coverage>=7.10.6",
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
]

[tool.uv]
default-groups = [ "dev", "log"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
include = [
    "pyproject.toml",
    "main.py",
    "src/**/*.py",
    "tests/**/*.py",
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".devenv",
]
# Same as Black.
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = [
    "D101",
    "D102",
    "E741" ]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[[tool.mypy.overrides]]
module = ["torchvision.*", "tqdm_loggable.*", "logdecorator.*"]
ignore_missing_imports = true

